--- a/initial/src/main/resources/application.yml
+++ b/initial/src/main/resources/application.yml
@@ -1,3 +1,17 @@
 spring:
-  batch:
-    job.names: ${job.name:NONE}
+#  batch:
+#    job.names: ${job.name:NONE}
+
+  jpa:
+    hibernate:
+        ddl-auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.MySQL57Dialect
+    properties:
+      hibernate.format_sql : true
+
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:13306/testdb
+    username: root
+    password: root
